# libnputil

./: CMakeLists.txt  README.markdown
include/: nputil_libusb.h  nputil_libusb1.h
include/nputil/: nputil_libusb.h  nputil_libusb1.h  nputil_win32hid.h
src/: CMakeLists.txt  nputil_libusb.c  nputil_libusb1.c  nputil_win32hid.c
